--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -13,7 +13,13 @@
 		]
 	},
 	"browser_action":{
-		"default_icon": "icon.png",
+		"default_icon": {
+            "16": "icon16.png",
+            "19": "icon19.png",
+            "38": "icon38.png",
+            "48": "icon48.png",
+            "128": "icon128.png"
+        },
 		"default_popup": "interface.html"
 	},
 
