--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -14,24 +14,26 @@
 	},
 	"browser_action":{
 		"default_icon": {
-            "16": "icon16_d.png",
-            "19": "icon19_d.png",
-            "38": "icon38_d.png",
-            "48": "icon48_d.png",
-            "128": "icon128_d.png"
+            "16": "icons/icon16_d.png",
+            "19": "icons/icon19_d.png",
+            "38": "icons/icon38_d.png",
+            "48": "icons/icon48_d.png",
+            "128": "icons/icon128_d.png"
         },
 		"default_popup": "interface.html"
 	},
 
 	"content_scripts":[
 		{
-		"matches":[
-			"<all_urls>"
-		],
-		"js":[
-			"scripts/content.js"
-		],
-			"run_at": "document_start"
+    		"matches":[
+    			"<all_urls>"
+    		],
+
+    		"js":[
+    			"scripts/content.js"
+    		],
+			"run_at": "document_start",
+            "all_frames": true
 		}
 	]
 }
