--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -33,7 +33,8 @@
     			"scripts/content.js"
     		],
 			"run_at": "document_start",
-            "all_frames": true
+            "all_frames": true,
+            "match_about_blank": true
 		}
 	]
 }
