Changing tab reload logic to be based on content script loading. Applying a runtime.id based event key to avoid collisions.

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -33,8 +33,7 @@
     			"scripts/content.js"
     		],
 			"run_at": "document_start",
-            "all_frames": true,
-            "match_about_blank": true
+            "all_frames": true
 		}
 	]
 }
