--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "ErrorAnnex",
-	"description": "ErrorAnnex by AnnexTools is the easiest way to spot errors on you products and sites around the web.",
+	"description": "ErrorAnnex by AnnexTools is the easiest way to listen for errors on your products and sites around the web.",
 	"version": "1.0.0",
 	"permissions":[
 		"tabs",
@@ -21,15 +21,17 @@
             "128": "icons/icon128_d.png"
         },
 
-        "icons": {
-            "16": "icons/icon16_d.png",
-            "19": "icons/icon19_d.png",
-            "38": "icons/icon38_d.png",
-            "48": "icons/icon48_d.png",
-            "128": "icons/icon128_d.png"
-        },
+
 		"default_popup": "interface.html"
 	},
+
+    "icons": {
+        "16": "icons/icon16_d.png",
+        "19": "icons/icon19_d.png",
+        "38": "icons/icon38_d.png",
+        "48": "icons/icon48_d.png",
+        "128": "icons/icon128_d.png"
+    },
 
 	"content_scripts":[
 		{
