adding google analytics monitoring to the app

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -47,5 +47,7 @@
 		}
 	],
 
+    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+    
     "offline_enabled" : true
 }
