Fix tab access issues, make sure we handle tab id updates, and apply response error handling correctly

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -5,7 +5,8 @@
 	"version": "1.0.0",
 	"permissions":[
 		"tabs",
-		"<all_urls>"
+		"<all_urls>",
+        "webNavigation"
 	],
 	"background":{
 		"scripts":[
