--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "ErrorAnnex",
-	"description": "ErrorAnnex by AnnexTools is the easiest way to listen for errors on your products and sites around the web.",
+	"description": "ErrorAnnex is the easiest way to listen for errors on your products and sites around the web.",
 	"version": "0.0.0",
 	"permissions":[
 		"tabs",
