--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,6 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "ErrorAnnex",
+    "short_name": "ErrorAnnex",
 	"description": "ErrorAnnex is the easiest way to listen for errors on your products and sites around the web.",
 	"version": "0.0.0",
 	"permissions":[
