--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ErrorAnnex",
-  "version": "1.0.1.3",
+  "version": "1.0.2",
   "description": "ErrorAnnex Extension",
   "main": "gulpFile.js",
   "directories": {
@@ -30,6 +30,7 @@
     "gulp-zip": "^3.0.2"
   },
   "devDependencies": {
-    "gulp-run-sequence": "^0.3.2"
+    "gulp-run-sequence": "^0.3.2",
+    "semver": "^4.3.3"
   }
 }
