--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -7,7 +7,8 @@
 	"permissions":[
 		"tabs",
 		"<all_urls>",
-        "webNavigation"
+        "webNavigation",
+        "notifications"
 	],
 	"background":{
 		"scripts":[
